[tool.poetry]
name = "qapi"
version = "0.1.0"
description = "An API service to get random questions"
authors = ["DillonB07"]
license = "lgpl-3.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
